added the user name to the session

--- a/templates/top-melons.html
+++ b/templates/top-melons.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
-
+    <h1>Welcome, {{ session['user_name'] }}</h1>
 <!-- Create a div for every Most Loved Melon using a Jinja for loop -->
     {% if melons %}
     {% for melon in melons %}
     <div class='melon-div'>
-        <h3>{{ melons[melon]['name'] }}</h3>
+        <h3>{{ session['user_name'] }}, this is a {{ melons[melon]['name'] }}</h3>
         <h2>Loved {{ melons[melon]['num_loves'] }} times.</h2>
         <img src={{ melons[melon]['img'] }}> -->
     </div>
