--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,7 @@
         <h1>UberMelon's Most Loved Melons</h1>
         <h2>People sure do love them.</h2>
         <form action="/get-name">
-            Please enter your name: <input type="text" name="firstname">
+            Please enter your name: <input type="text" name="firstname" required>
             <input type="submit">
         </form>
 
